# symspell-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: lib.rs  symspell.rs
