[package]
name = "symspell-wasm"
version = "0.1.0"
license = "MIT"
authors = ["Matej Janjic <matej.janjic@productive.io>"]
keywords = ["spellcheck"]
description = "Spelling correction & Fuzzy search"
homepage = "https://github.com/mjanjic01/symspell-wasm"
repository = "https://github.com/mjanjic01/symspell-wasm"
exclude = [
    "data/*",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
strsim = "^0.9"
unidecode = "^0.3"
derive_builder = "^0.7"
wasm-bindgen = "0.2"
